py3.install_sources(['test_regression.py',
  '__init__.py',
  'test_pade.py',
  'test_ndgriddata.py',
  'test_interpolate.py',
  'test_fitpack.py',
  'test_rbf.py',
  'test_interpnd.py',
  'test_polyint.py',
  'test_gil.py',
  'test_bsplines.py',
  'test_fitpack2.py',
  'test_rbfinterp.py'],
  pure : false,
  subdir : 'scipy/interpolate/tests'
)