subdir('tests')

py3.install_sources(
    ['projections.py', 
     '__init__.py', 
     'report.py', 
     'canonical_constraint.py', 
     'qp_subproblem.py', 
     'minimize_trustregion_constr.py', 
     'tr_interior_point.py', 
     'equality_constrained_sqp.py'],
    pure: false,
    subdir: 'scipy/optimize/_trustregion_constr'
)