py3.install_sources([
    'test_regression.py',
    'test__basinhopping.py',
    '__init__.py',
    'test_lbfgsb_setulb.py',
    'test_trustregion_krylov.py',
    'test_lsq_common.py',
    'test_cython_optimize.py',
    'test_linear_assignment.py',
    'test__spectral.py',
    'test__dual_annealing.py',
    'test_optimize.py',
    'test_lbfgsb_hessinv.py',
    'test_zeros.py',
    'test_constraints.py',
    'test__linprog_clean_inputs.py',
    'test__root.py',
    'test_linesearch.py',
    'test_cobyla.py',
    'test_slsqp.py',
    'test_hessian_update_strategy.py',
    'test_minpack.py',
    'test_nnls.py',
    'test_least_squares.py',
    'test__remove_redundancy.py',
    'test_differentiable_functions.py',
    'test__numdiff.py',
    'test_quadratic_assignment.py',
    'test_constraint_conversion.py',
    'test_trustregion_exact.py',
    'test_trustregion.py',
    'test_nonlin.py',
    'test_tnc.py',
    'test_linprog.py',
    'test_lsq_linear.py',
    'test__differential_evolution.py',
    'test_minimize_constrained.py',
    'test__shgo.py'],
    pure : false,
    subdir : 'scipy/optimize/tests'
)
