py3.install_sources(['__init__.py',
  'test__plotutils.py',
  'test_kdtree.py',
  'test_hausdorff.py',
  'test__procrustes.py',
  'test_spherical_voronoi.py',
  'test_slerp.py',
  'test_distance.py',
  'test_qhull.py',
  'data/pdist-spearman-ml.txt',
  'data/pdist-boolean-inp.txt',
  'data/pdist-minkowski-5.8-ml-iris.txt',
  'data/selfdual-4d-polytope.txt',
  'data/pdist-euclidean-ml-iris.txt',
  'data/pdist-correlation-ml.txt',
  'data/pdist-double-inp.txt',
  'data/random-uint-data.txt',
  'data/random-bool-data.txt',
  'data/iris.txt',
  'data/random-int-data.txt',
  'data/pdist-jaccard-ml.txt',
  'data/pdist-seuclidean-ml.txt',
  'data/pdist-euclidean-ml.txt',
  'data/pdist-cosine-ml.txt',
  'data/pdist-chebyshev-ml.txt',
  'data/pdist-minkowski-3.2-ml.txt',
  'data/pdist-cityblock-ml.txt',
  'data/pdist-seuclidean-ml-iris.txt',
  'data/pdist-jensenshannon-ml.txt',
  'data/cdist-X1.txt',
  'data/pdist-chebyshev-ml-iris.txt',
  'data/degenerate_pointset.npz',
  'data/pdist-correlation-ml-iris.txt',
  'data/pdist-minkowski-3.2-ml-iris.txt',
  'data/pdist-hamming-ml.txt',
  'data/random-double-data.txt',
  'data/cdist-X2.txt',
  'data/pdist-cosine-ml-iris.txt',
  'data/pdist-jensenshannon-ml-iris.txt',
  'data/pdist-cityblock-ml-iris.txt'],
  pure: false,
  subdir: 'scipy/spatial/tests'
)