py3.install_sources(['__init__.py',
  'test_arffread.py'],
  pure : false,
  subdir : 'scipy/io/arff/tests'
)

py3.install_sources(['data/test8.arff',
  'data/quoted_nominal_spaces.arff',
  'data/iris.arff',
  'data/test9.arff',
  'data/test4.arff',
  'data/test5.arff',
  'data/test1.arff',
  'data/nodata.arff',
  'data/test3.arff',
  'data/quoted_nominal.arff',
  'data/test6.arff',
  'data/missing.arff',
  'data/test11.arff',
  'data/test2.arff',
  'data/test7.arff',
  'data/test10.arff'],
  pure : false,
  subdir : 'scipy/io/arff/tests/data'
)