py3.install_sources(['__init__.py',
  'test_mio5_utils.py',
  'test_mio.py',
  'test_miobase.py',
  'test_streams.py',
  'test_byteordercodes.py',
  'test_mio_funcs.py',
  'test_pathological.py',
  'test_mio_utils.py'],
  pure : false,
  subdir : 'scipy/io/matlab/tests'
)

py3.install_sources(['data/teststring_7.4_GLNX86.mat',
  'data/testunicode_7.4_GLNX86.mat',
  'data/testminus_6.5.1_GLNX86.mat',
  'data/teststruct_7.4_GLNX86.mat',
  'data/testobject_7.4_GLNX86.mat',
  'data/testcomplex_6.1_SOL2.mat',
  'data/teststructnest_6.5.1_GLNX86.mat',
  'data/teststructarr_7.4_GLNX86.mat',
  'data/testsparsecomplex_7.4_GLNX86.mat',
  'data/sqr.mat',
  'data/testmatrix_6.5.1_GLNX86.mat',
  'data/teststructnest_6.1_SOL2.mat',
  'data/japanese_utf8.txt',
  'data/teststring_7.1_GLNX86.mat',
  'data/testsparsefloat_7.4_GLNX86.mat',
  'data/testdouble_6.5.1_GLNX86.mat',
  'data/testcellnest_7.1_GLNX86.mat',
  'data/testmatrix_7.4_GLNX86.mat',
  'data/testsparse_7.4_GLNX86.mat',
  'data/testmatrix_7.1_GLNX86.mat',
  'data/testcellnest_6.5.1_GLNX86.mat',
  'data/testcomplex_4.2c_SOL2.mat',
  'data/teststringarray_7.1_GLNX86.mat',
  'data/teststringarray_4.2c_SOL2.mat',
  'data/testcell_6.5.1_GLNX86.mat',
  'data/testminus_4.2c_SOL2.mat',
  'data/testcell_7.1_GLNX86.mat',
  'data/teststring_4.2c_SOL2.mat',
  'data/testcomplex_6.5.1_GLNX86.mat',
  'data/testsparse_6.1_SOL2.mat',
  'data/logical_sparse.mat',
  'data/test_mat4_le_floats.mat',
  'data/testminus_6.1_SOL2.mat',
  'data/malformed1.mat',
  'data/testemptycell_7.1_GLNX86.mat',
  'data/testsparse_6.5.1_GLNX86.mat',
  'data/testcomplex_7.1_GLNX86.mat',
  'data/testmatrix_4.2c_SOL2.mat',
  'data/testminus_7.1_GLNX86.mat',
  'data/test3dmatrix_7.4_GLNX86.mat',
  'data/testcellnest_6.1_SOL2.mat',
  'data/testscalarcell_7.4_GLNX86.mat',
  'data/big_endian.mat',
  'data/testmulti_7.1_GLNX86.mat',
  'data/testsparse_7.1_GLNX86.mat',
  'data/teststructnest_7.1_GLNX86.mat',
  'data/test_empty_struct.mat',
  'data/testcellnest_7.4_GLNX86.mat',
  'data/testmatrix_6.1_SOL2.mat',
  'data/testobject_6.1_SOL2.mat',
  'data/corrupted_zlib_data.mat',
  'data/testmulti_7.4_GLNX86.mat',
  'data/testhdf5_7.4_GLNX86.mat',
  'data/testminus_7.4_GLNX86.mat',
  'data/teststructarr_6.5.1_GLNX86.mat',
  'data/testdouble_4.2c_SOL2.mat',
  'data/test3dmatrix_7.1_GLNX86.mat',
  'data/testonechar_6.5.1_GLNX86.mat',
  'data/testsparsecomplex_6.1_SOL2.mat',
  'data/testonechar_4.2c_SOL2.mat',
  'data/testobject_7.1_GLNX86.mat',
  'data/teststring_6.1_SOL2.mat',
  'data/testcomplex_7.4_GLNX86.mat',
  'data/broken_utf8.mat',
  'data/miuint32_for_miint32.mat',
  'data/test_skip_variable.mat',
  'data/teststringarray_6.5.1_GLNX86.mat',
  'data/teststructnest_7.4_GLNX86.mat',
  'data/testbool_8_WIN64.mat',
  'data/testsparsecomplex_6.5.1_GLNX86.mat',
  'data/testemptycell_5.3_SOL2.mat',
  'data/teststruct_6.1_SOL2.mat',
  'data/little_endian.mat',
  'data/single_empty_string.mat',
  'data/test3dmatrix_6.1_SOL2.mat',
  'data/testsparsecomplex_4.2c_SOL2.mat',
  'data/teststructarr_6.1_SOL2.mat',
  'data/nasty_duplicate_fieldnames.mat',
  'data/testdouble_7.4_GLNX86.mat',
  'data/one_by_zero_char.mat',
  'data/testonechar_7.4_GLNX86.mat',
  'data/corrupted_zlib_checksum.mat',
  'data/teststruct_7.1_GLNX86.mat',
  'data/bad_miutf8_array_name.mat',
  'data/testvec_4_GLNX86.mat',
  'data/testsparse_4.2c_SOL2.mat',
  'data/testsimplecell.mat',
  'data/testobject_6.5.1_GLNX86.mat',
  'data/testmulti_4.2c_SOL2.mat',
  'data/teststructarr_7.1_GLNX86.mat',
  'data/testonechar_7.1_GLNX86.mat',
  'data/parabola.mat',
  'data/testcell_7.4_GLNX86.mat',
  'data/testemptycell_7.4_GLNX86.mat',
  'data/testunicode_7.1_GLNX86.mat',
  'data/testfunc_7.4_GLNX86.mat',
  'data/testdouble_7.1_GLNX86.mat',
  'data/miutf8_array_name.mat',
  'data/some_functions.mat',
  'data/testonechar_6.1_SOL2.mat',
  'data/teststringarray_6.1_SOL2.mat',
  'data/testcell_6.1_SOL2.mat',
  'data/testsparsecomplex_7.1_GLNX86.mat',
  'data/testemptycell_6.5.1_GLNX86.mat',
  'data/testdouble_6.1_SOL2.mat',
  'data/teststruct_6.5.1_GLNX86.mat',
  'data/bad_miuint32.mat',
  'data/teststring_6.5.1_GLNX86.mat',
  'data/teststringarray_7.4_GLNX86.mat',
  'data/test3dmatrix_6.5.1_GLNX86.mat'],
  pure : false,
  subdir : 'scipy/io/matlab/tests/data'
)